--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -42,7 +42,7 @@
         <link href="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.css" rel="stylesheet">
         <script src="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.js"></script>
 
-        <!-- -->
+        <!--
         <style type="text/css">
             div[class="row"] {
                 outline: 1px dotted rgba(0, 0, 0, 0.25);
@@ -53,6 +53,7 @@
                 outline: 1px dotted rgba(0, 0, 0, 0.5);
             }
         </style>
+        -->
         
     </head>
     <body id="start">
@@ -66,7 +67,7 @@
 
                 <li class="sidebar-nav-item"><hr></li>
 
-                <li class="sidebar-nav-item"><a href="#detailDescription">>> Beschreibung</a></li>
+                <li class="sidebar-nav-item"><a href="#detailDescription">>> Detailbeschreibung</a></li>
                 <li class="sidebar-nav-item"><a href="#example">>> Beispiel</a></li>
             </ul>
         </nav>
