--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -42,6 +42,10 @@
         <link href="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.css" rel="stylesheet">
         <script src="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.js"></script>
 
+        <!-- Tabulator -->
+        <link href="https://unpkg.com/tabulator-tables@5.0.10/dist/css/tabulator.min.css" rel="stylesheet">
+        <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.0.10/dist/js/tabulator.min.js"></script>
+
         <!--
         <style type="text/css">
             div[class="row"] {
@@ -55,6 +59,7 @@
         </style>
         -->
         
+        
     </head>
     <body id="start">
 
@@ -63,7 +68,7 @@
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-nav-item"><a href="/view/home">Start</a></li>
-                <li class="sidebar-nav-item"><a href="/view/table">> Tabelle</a></li>
+                <li class="sidebar-nav-item"><a href="/view/tabelle">> Tabelle</a></li>
 
                 <li class="sidebar-nav-item"><hr></li>
 
@@ -85,7 +90,7 @@
         {% include subTemplate ~ '.html' %}
 
          <!-- Footer -->
-        <footer class="content-section bg-primary text-white">
+        <footer class="bg-primary text-white">
             <div class="container px-4 px-lg-5">
                 <!-- Kontaktmöglichkeit -->
                 
@@ -103,8 +108,6 @@
 
         <!-- Scroll to Top Button-->
         <a class="scroll-to-top rounded" href="#start"><i class="fas fa-angle-up"></i></a>
-
-        
 
     </body>
 </html>
