[develop]  Filterung des Tabelleninhaltes

--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -67,7 +67,7 @@
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-nav-item"><a href="/view/home">Start</a></li>
+                <li class="sidebar-nav-item"><a href="/view/home">> Projektbeschreibung</a></li>
                 <li class="sidebar-nav-item"><a href="/view/tabelle">> Tabelle</a></li>
 
                 <li class="sidebar-nav-item"><hr></li>
@@ -82,7 +82,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">Daten im Überblick</h1>
                 <h3 class="mb-5"><em>Schnelle und kostengünstige Information</em></h3>
-                <a class="btn btn-primary btn-xl" href="#map">mehr erfahren</a>
+                <a class="btn btn-primary btn-xl" href="/view/home">Projektbeschreibung</a>
             </div>
         </header>
         
