--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -63,8 +63,9 @@
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-nav-item"><a href="/view/home">> Projektbeschreibung</a></li>
-                <li class="sidebar-nav-item"><a href="/view/tabelle">> Tabelle</a></li>
+                {% for bla in navigation %}
+                    <li class="sidebar-nav-item"><a href="{{ bla.link }}">> {{ bla.linkText }}</a></li>
+                {% endfor %}
 
                 <li class="sidebar-nav-item"><hr></li>
 
