--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -35,12 +35,15 @@
         <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
 
 
-        <!-- Core theme JS-->
+        <!-- Core Theme JS-->
         <script src="/js/scripts.js"></script>
 
         <!-- Tabulator -->
         <link href="https://unpkg.com/tabulator-tables@5.0.10/dist/css/tabulator.min.css" rel="stylesheet">
         <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.0.10/dist/js/tabulator.min.js"></script>
+
+        <!-- Chart JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
         <!--
         <style type="text/css">
