--- a/public/template/tabelle.html
+++ b/public/template/tabelle.html
@@ -11,7 +11,8 @@
             
         </div>
         <div class="col-lg-4 col-md-4  col-sm-6 col-xs-12 mb-5 mb-lg-0">
-            Beschreibung und Video
+            Beschreibung und Video <br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/XmIDlz-uVGs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mb-5 mb-lg-0">
             
@@ -34,13 +35,12 @@
         
             <!-- Filter -->
             <div class="filter">
-
-              <button class="filter-add">+</button>
-              <button class="filter-sub">-</button>
                 
               <select class="filter-field">
                 <option value="name">Name</option>
                 <option value="zustand">Zustand</option>
+                <option value="messung">Messung</option>
+                <option value="baumnummer">Baumnummer</option>
                 <option value="datum">Datum</option>
               </select>
 
@@ -57,8 +57,9 @@
 
               <button class="filter-set">Filter setzen</button>
               <button class="filter-clear">Filter löschen</button>
-            </div>
 
+              <br><code id="query">/api/records/baumkataster</code>
+            </div>
 
             <div id="result"></div>
               
@@ -68,7 +69,7 @@
 
                 // URL für Tbelle
                 var tableURL = "/api/records/baumkataster"; 
-
+                
                 $(document).ready(function()
                 {
                     table = new Tabulator("#result", {
@@ -115,11 +116,11 @@
                             i++;
                         });
                     
-                        // alert(filter);
-                        
                         if(append){
                             table.clearData();
                             table.setData(tableURL + '?' + appendix + filter);
+
+                            $("#query").html(tableURL + '?' + appendix + filter);
 
                             append = false;
                         }
@@ -132,6 +133,10 @@
                     {
                       table.clearData();
                       table.setData(tableURL);
+
+                      $("#query").html(tableURL);
+                      $("#countRows").html(15000);
+
                     });
 
                 });
