--- a/public/template/charts.html
+++ b/public/template/charts.html
@@ -32,7 +32,7 @@
         
         <div class="col-lg-6 col-md-8  col-sm-12 col-xs-12 mb-5 mb-lg-0">
         
-            <canvas id="myChart" width="400" height="400"></canvas>
+            <canvas id="myChart"></canvas>
 
             <script>
                 $(document).ready(function()
@@ -41,19 +41,26 @@
 
                     var url = "/api/records/anzahlBaeume";
 
+                    var label = [];
+                    var anzahl = [];
+                    var color = [];
+
+                    
+
 
                     // leeres Diagramm
                     var myChart = new Chart(ctx, {
-                        type: 'bar',
+                        type: 'pie',
                         data: {
                             labels: [],
                             datasets: [
                                 {
                                     label: "Anzahl Bäume",
-                                    fill: false,
+                                    fill: true, // Fläche füllen
                                     lineTension: 0.1,
-                                    backgroundColor: "rgba(75,192,192,0.4)",
-                                    borderColor: "rgba(75,192,192,1)",
+                                    // backgroundColor: "rgba(77, 77, 255,0.6)", // Balkenfarbe
+                                    backgroundColor: [], // Balkenfarbe
+                                    borderColor: "rgba(0, 0, 179,1)", // Balkenrand
                                     borderCapStyle: 'butt',
                                     borderDash: [],
                                     borderDashOffset: 0.0,
@@ -65,6 +72,8 @@
                                     pointHoverBackgroundColor: "rgba(75,192,192,1)",
                                     pointHoverBorderColor: "rgba(220,220,220,1)",
                                     pointHoverBorderWidth: 2,
+                                    hoverBackgroundColor: 'rgba(200, 200, 200, 1)', // Maus über Abschnitt
+                                    hoverBorderColor: 'rgba(200, 200, 200, 1)', // Maus über Abschnitt
                                     pointRadius: 1,
                                     pointHitRadius: 10,
                                     data: [],
@@ -85,24 +94,32 @@
                                 }]
                             }
                         }
-                    }); 
+                    });
 
                     $.get( url, function( data ) {
                         var j = data.length;
-                        var label = [];
-                        var anzahl = [];
 
                         for(var i = 0; i < j; i++){
                             
                             label.push(data[i].label);
                             anzahl.push(data[i].anzahl);
+
+                            var o = Math.round, r = Math.random, s = 255;
+                            color.push('rgb(' + o(r()*s) + ',' + o(r()*s) + ',' + o(r()*s) + ')');
                         }
 
+                        // console.dir(color);
                         myChart.data.labels = label;
                         myChart.data.datasets[0].data = anzahl; // or you can iterate for multiple datasets
-                        myChart.update(); // finally update our chart
-                    }); 
+                        // myChart.backgroundColor = color; // or you can iterate for multiple datasets
+
+                        myChart.update(); // finally update our chart 
+                    });
+                    
                 });
+
+                
+
             </script>
 
             
