--- a/public/template/leer.html
+++ b/public/template/leer.html
@@ -1,4 +1,4 @@
- <!-- Startbereich -->
+<!-- Startbereich -->
 <section>
     <div class="row content-section text-center">
 
@@ -6,16 +6,12 @@
             <h2 class="mb-5">leeres Subtemplate</h2>
         </div>
 
-        <div class="col-lg-1"></div>
-        <div class="col-lg-3 clo-lg-push-1 col-md-4 col-sm-6 col-xs-12 mb-5 mb-lg-0">
-            Bereich 1a
+        <div class="col-lg-3 col-md-2 col-sm-1"></div>
+
+        <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
+            
         </div>
-        <div class="col-lg-4 col-md-4  col-sm-6 col-xs-12 mb-5 mb-lg-0">
-            Bereich 2a
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mb-5 mb-lg-0">
-            Bereich 3a
-        </div>
-        <div class="col-lg-1"></div>
+
+        <div class="col-lg-3 col-md-2 col-sm-1">
     </div>
 </section>
