--- a/public/template/test1.html
+++ b/public/template/test1.html
@@ -18,14 +18,11 @@
                 }
 
                 function getData() {
-                  var dataSize = 32;
-                  var evenBackgroundColor = 'rgba(255, 99, 132, 0.2)';
-                  var evenBorderColor = 'rgba(255,99,132,1)';
-                  var oddBackgroundColor = 'rgba(75, 192, 192, 0.2)';
-                  var oddBorderColor = 'rgba(153, 102, 255, 1)';
-
+                  var dataSize = 10; // Anzahl Elemente
+                  
                   var labels = [];
 
+                  // Definitionsblock
                   var scoreData = {
                     label: 'individuelle Farben',
                     data: [],
@@ -59,7 +56,7 @@
                   console.dir(chartData);
                   
                   var myBar = new Chart(document.getElementById("myChart").getContext("2d"), {
-                    type: 'bar',
+                    type: 'doughnut',
                     data: chartData,
                     options: {
                       title:{
