--- a/public/template/test1.html
+++ b/public/template/test1.html
@@ -13,68 +13,167 @@
 
             <script type="text/javascript">
 
-                randomScalingFactor = function() {
-                    return Math.round(Math.random() * 100);
-                }
-
-                function getData() {
-                  var dataSize = 10; // Anzahl Elemente
-                  
-                  var labels = [];
-
-                  // Definitionsblock
-                  var scoreData = {
-                    label: 'individuelle Farben',
-                    data: [],
-                    backgroundColor: [],
-                    borderColor: [],
-                    borderWidth: 1,
-                    hoverBackgroundColor: 'rgba(200, 200, 200, 1)',
-                    hoverBorderColor: 'rgba(200, 200, 200, 1)',
-                  };
-
-                  for (var i = 0; i < dataSize; i++) {
-                    scoreData.data.push(randomScalingFactor());
-                    labels.push("Score " + (i + 1));
-
-                    var o = Math.round, r = Math.random, s = 255;
-                    var farbWert = 'rgb(' + o(r()*s) + ',' + o(r()*s) + ',' + o(r()*s) + ',1.0)';
-
-                    scoreData.backgroundColor.push(farbWert);
-                    scoreData.borderColor.push(farbWert);
-                  }
-
-                  return {
-                    labels: labels,
-                    datasets: [scoreData],
-                  };
-                };
-
                 $("#document").ready(function()
                 {
-                  var chartData = getData();
-                  console.dir(chartData);
-                  
-                  var myBar = new Chart(document.getElementById("myChart").getContext("2d"), {
-                    type: 'doughnut',
-                    data: chartData,
-                    options: {
-                      title:{
-                        display: true,
-                        text: "Chart.js - Dynamically Data and Colors"
-                      },
-                      legend: {
-                        display: false
-                      },
-                      scales: {
-                        yAxes: [{
-                          ticks: {
-                            beginAtZero: true
-                          }
-                        }]
-                      }
+                    var result = {};
+
+                    randomScalingFactor = function() {
+                        return Math.round(Math.random() * 100);
                     }
-                  });
+
+                    function getJsonData(data){
+                        // let j = data.length;
+                        // let label = [];
+                        // let anzahl = [];
+
+                        // // console.dir(data);
+
+                        // for(var i = 0; i < j; i++)
+                        // {
+                        //      label.push(data[i].label);
+                        //      anzahl.push(data[i].anzahl);
+                        // }
+
+                        // return {
+                        //     label: label,
+                        //     data: anzahl
+                        // };
+
+
+
+                        var dataSize = 10;
+                          var evenBackgroundColor = 'rgba(255, 99, 132, 0.2)';
+                          var evenBorderColor = 'rgba(255,99,132,1)';
+                          var oddBackgroundColor = 'rgba(75, 192, 192, 0.2)';
+                          var oddBorderColor = 'rgba(153, 102, 255, 1)';
+
+                          var labels = [];
+
+                          var scoreData = {
+                            label: 'Mid-Term Exam 1',
+                            data: [],
+                            backgroundColor: [],
+                            borderColor: [],
+                            borderWidth: 1,
+                            hoverBackgroundColor: 'rgba(200, 200, 200, 1)',
+                            hoverBorderColor: 'rgba(200, 200, 200, 1)',
+                          };
+
+                          for (var i = 0; i < dataSize; i++) {
+                            scoreData.data.push(randomScalingFactor());
+                            labels.push("Score " + (i + 1));
+
+                            // if (i % 2 === 0) {
+                              scoreData.backgroundColor.push(evenBackgroundColor);
+                              scoreData.borderColor.push(evenBorderColor);
+                            // }
+                            // else {
+                            //   scoreData.backgroundColor.push(oddBackgroundColor);
+                            //   scoreData.borderColor.push(oddBorderColor);
+                            // }
+                          }
+
+
+                          var myBar = new Chart(document.getElementById("myChart").getContext("2d"), {
+                            type: 'bar',
+                            data: {
+                                labels: labels,
+                                datasets: [scoreData],
+                            },
+                            options: {
+                              title:{
+                                display: true,
+                                text: "Chart.js - Dynamically Data and Colors"
+                              },
+                              legend: {
+                                display: false
+                              },
+                              scales: {
+                                yAxes: [{
+                                  ticks: {
+                                    beginAtZero: true
+                                  }
+                                }]
+                              }
+                            }
+                          });
+
+                        // return {
+                        //     labels: labels,
+                        //     datasets: [scoreData],
+                        // };
+                    }
+
+                   
+                    function getData()
+                    {
+                        var url = "/api/records/anzahlBaeume";
+
+                        $.get({
+                            url: url,
+                            success: getJsonData
+                        });
+
+                        console.dir(test);
+
+                        //   var dataSize = 10;
+                        //   var evenBackgroundColor = 'rgba(255, 99, 132, 0.2)';
+                        //   var evenBorderColor = 'rgba(255,99,132,1)';
+                        //   var oddBackgroundColor = 'rgba(75, 192, 192, 0.2)';
+                        //   var oddBorderColor = 'rgba(153, 102, 255, 1)';
+
+                        //   var labels = [];
+
+                        //   var scoreData = {
+                        //     label: 'Mid-Term Exam 1',
+                        //     data: [],
+                        //     backgroundColor: [],
+                        //     borderColor: [],
+                        //     borderWidth: 1,
+                        //     hoverBackgroundColor: 'rgba(200, 200, 200, 1)',
+                        //     hoverBorderColor: 'rgba(200, 200, 200, 1)',
+                        //   };
+
+                        //   for (var i = 0; i < dataSize; i++) {
+                        //     scoreData.data.push(randomScalingFactor());
+                        //     labels.push("Score " + (i + 1));
+
+                        //     // if (i % 2 === 0) {
+                        //       scoreData.backgroundColor.push(evenBackgroundColor);
+                        //       scoreData.borderColor.push(evenBorderColor);
+                        //     // }
+                        //     // else {
+                        //     //   scoreData.backgroundColor.push(oddBackgroundColor);
+                        //     //   scoreData.borderColor.push(oddBorderColor);
+                        //     // }
+                        //   }
+
+                        // return {
+                        //     labels: labels,
+                        //     datasets: [scoreData],
+                        // };
+                    }
+                  
+                  // var myBar = new Chart(document.getElementById("myChart").getContext("2d"), {
+                  //   type: 'bar',
+                  //   data: getData(),
+                  //   options: {
+                  //     title:{
+                  //       display: true,
+                  //       text: "Chart.js - Dynamically Data and Colors"
+                  //     },
+                  //     legend: {
+                  //       display: false
+                  //     },
+                  //     scales: {
+                  //       yAxes: [{
+                  //         ticks: {
+                  //           beginAtZero: true
+                  //         }
+                  //       }]
+                  //     }
+                  //   }
+                  // });
                 });
 
             </script>
