[develop]  Einbau Javascript View Renderer , http://github.com/JocaPC/jquery-view-engine

--- a/public/template/leer.html
+++ b/public/template/leer.html
@@ -15,3 +15,17 @@
         <div class="col-lg-3 col-md-2 col-sm-1">
     </div>
 </section>
+
+<!-- Beispiel -->
+<section>
+    <div class="row content-section text-center">
+
+        <div class="col-lg-3 col-md-2 col-sm-1"></div>
+
+        <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
+            Beispiel
+        </div>
+
+        <div class="col-lg-3 col-md-2 col-sm-1">
+    </div>
+</section>
