--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -38,6 +38,9 @@
         <!-- Core Theme JS-->
         <script src="/js/scripts.js"></script>
 
+        <!-- View Engine -->
+        <script type="text/javascript" src="/viewEngine/jquery.view-engine.min.js"></script>
+
         <!-- Tabulator -->
         <link href="https://unpkg.com/tabulator-tables@5.0.10/dist/css/tabulator.min.css" rel="stylesheet">
         <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.0.10/dist/js/tabulator.min.js"></script>
