--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -20,6 +20,21 @@
 
 		<!-- Own CSS -->
 		<link rel="stylesheet" href="/own/own.css">
+
+		<!-- jQuery library -->
+		<script src="/jquery/jquery-3.6.0.js"></script>
+
+		<!-- Latest compiled JavaScript -->
+		<script src="/js/bootstrap.min.js"></script>	
+
+		<!-- View Engine -->
+        <script type="text/javascript" src="/viewEngine/jquery.view-engine.min.js"></script>
+
+        <!-- JQuery Tabulator -->
+        <script type="text/javascript" src="/tabulator/js/tabulator.min.js"></script>	
+
+        <!-- Chart JS -->
+        <script src="/chartjs/chart.min.js" type="text/javascript"></script>
 		
 	</head>
 	<body>
@@ -75,19 +90,6 @@
             </div>
         </footer>
 
-		<!-- jQuery library -->
-		<script src="/jquery/jquery-3.6.0.js"></script>
-
-		<!-- Latest compiled JavaScript -->
-		<script src="/js/bootstrap.min.js"></script>	
-
-		<!-- View Engine -->
-        <script type="text/javascript" src="/viewEngine/jquery.view-engine.min.js"></script>
-
-        <!-- JQuery Tabulator -->
-        <script type="text/javascript" src="/tabulator/js/tabulator.min.js"></script>	
-
-        <!-- Chart JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		
 	</body>
 </html>
