[develop]  Markdown Dokumentationen

--- a/public/template/chart1.html
+++ b/public/template/chart1.html
@@ -11,7 +11,7 @@
             
         </div>
         <div class="col-lg-4 col-md-4  col-sm-6 col-xs-12 mb-5 mb-lg-0">
-            Beschreibung und Video
+            <code>URL: "/api/records/anzahlBaeume"</code>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mb-5 mb-lg-0">
             
@@ -113,8 +113,6 @@
                     });
                     
                 });
-
-                
 
             </script>
 
