--- a/public/template/chart3.html
+++ b/public/template/chart3.html
@@ -8,7 +8,7 @@
         <div class="col-lg-3 col-md-2 col-sm-1"></div>
 
         <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
-            <code>URL: 'http://map.local/api/records/anzahlBaeume'</code>
+            <code>URL: '/api/records/anzahlBaeume'</code>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1">
