--- a/public/template/home.html
+++ b/public/template/home.html
@@ -11,7 +11,7 @@
             Bereich 1a
         </div>
         <div class="col-lg-4 col-md-4  col-sm-6 col-xs-12 mb-5 mb-lg-0">
-            Inhalt
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/XmIDlz-uVGs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mb-5 mb-lg-0">
             Bereich 3a
