--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -31,10 +31,21 @@
         <script type="text/javascript" src="/viewEngine/jquery.view-engine.min.js"></script>
 
         <!-- JQuery Tabulator -->
-        <script type="text/javascript" src="/tabulator/js/tabulator.min.js"></script>	
+        <script type="text/javascript" src="/tabulator/js/tabulator.min.js"></script>
 
         <!-- Chart JS -->
         <script src="/chartjs/chart.min.js" type="text/javascript"></script>
+
+        <!-- statistische Funktionen -->
+        <script type="text/javascript" src="/statisticalJs/statistical_function.js"></script>
+
+        <!-- Statistical Tools -->
+        <script type="text/javascript" src="/statisticalJs/statisticsTools.js"></script>
+
+        <!-- Statistical Percentile -->
+        <script type="text/javascript" src="/statisticalJs/percentile-calculator.js"></script>
+
+
 		
 	</head>
 	<body>
